# ZOO-esp32

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TRACK.md  TROUBLES.md  build.rs  set-target.sh
abc/: Cargo.toml  Makefile.dev  README.md  build.rs
abc/.cargo/: config.toml
abc/examples/: abc-emb.rs  semi.rs
basics/: Cargo.toml  Makefile.dev  README.md  TRACK.md
basics/examples/: abc.rs  prompt-emb.rs  prompt.rs  ~prompt-emb.rs  ~semi.rs
built-in/: Cargo.toml  Makefile.dev  README.md
built-in/.excalidraw/: button.excalidraw
built-in/examples/: prompt-emb.rs  ~button.rs
comms/ble/: Cargo.toml  Makefile.dev  README.md  STEP_2.md  STEP_x.md  TERMINOLOGY.md  TRACK.md  build.rs
comms/ble-custom/: .gitignore  Cargo.toml  DESIGN.md  LEARNING.md  Makefile.dev  README.md  SECURITY-todo.md  TERMINOLOGY.md  TRACK.md  build.rs  pins.toml  set-target.sh  ~TRACK.md
comms/ble-custom/.cargo/: config.toml
comms/ble-custom/.excalidraw/: bluetooth-human-app.excalidraw  cloud-ble-app.excalidraw  security.excalidraw
comms/ble-custom/DEVS/: BLE development tools.md  Client-side caching.md  DESIGN.md  On the BLE protocol.md  Walkthrough of TrouBLE.md
comms/ble-custom/build_snippets/: pins.in
comms/ble-custom/examples/custom-emb/: boot_btn_ble.rs  boot_btn_task.rs  btn_gatt.rs  btn_task.rs  config.in  gatt_server.rs  main.rs  server_ble.rs
comms/ble-custom/src/: gatt_server.rs  gatt_service.rs  lib.rs  ~lib.rs
comms/ble/.cargo/: config.toml
comms/ble/DEVS/: No-std BLE host libraries.md  On the BLE protocol.md  Role of bleps.md
comms/ble/examples/: bas-emb.rs  bleps-emb.rs  custom-emb.rs  trouble-emb.rs  x-emb.rs  ~bas-emb.rs  ~bleps-emb.rs
comms/ble/src/: ble_bas_peripheral.rs  lib.rs
comms/ble/~src/: lib.rs  ~ble_bas_peripheral.rs
dc-motors/drv8871/: .gitignore  Cargo.toml  Makefile.dev  README.md  build.rs  pins.toml
dc-motors/drv8871/examples/: abc.rs
dc-motors/drv8871/snippets/: pins.in
def/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
def/.cargo/: config.toml
def/src/: ~lib.rs
devkit/: .gitignore  Cargo.toml  Makefile.dev  README.md  TRACK.md  build.rs  pins.toml  set-target.sh
devkit/DEVS/: Button pulls.md
devkit/build_snippets/: pins.in
devkit/examples/: a.rs  boot.emb.rs  common.rs  rgb.rs
devkit/src/: button.rs  mod.rs  ~button.rs
main/: Cargo.toml  Makefile  README.md  build.rs
main/.cargo/: config.toml
main/src/: lib.rs  result.rs
tof/flock/: Cargo.toml  Makefile.dev  build.rs  pins.toml
tof/flock/examples/: common.rs  flock.rs
tof/flock/snippets/: pins.in
tof/flock/src/: f_gated.rs  f_platform.rs  f_ranging.rs  lib.rs  platform.rs
tof/vl53l5cx/: .gitignore  Cargo.toml  Makefile.dev  README.md  TODO.md  WIRING.md  build.rs  pins.toml
tof/vl53l5cx/.excalidraw/: wiring2.excalidraw
tof/vl53l5cx/build_snippets/: pins.in
tof/vl53l5cx/examples/: common.rs  emb.rs  many-emb.rs  single-emb.rs  ~many-emb.rs
tof/vl53l5cx/snippets/: pins.in
tof/vl53l5cx/src/: lib.rs  ranging.rs  ranging_flock.rs  uld_platform.rs  vl.rs  z_array_try_map.rs
tof/vl53l5cx_uld/: .gitignore  Cargo.toml  Makefile  Makefile.2  Makefile.dev  README.md  TROUBLES.md  WIRING.md  Working with multiple boards.md  build.rs  pins.toml  platform.h  set-target.sh  wrap.h
tof/vl53l5cx_uld/.excalidraw/: build-map.excalidraw
tof/vl53l5cx_uld/DEVS/: Prior art.md  Setting of I2C address.md  ULD notes.md  bindgen enums.md  probe-rs speed.md
tof/vl53l5cx_uld/build_snippets/: pins.in  pins_next.in
tof/vl53l5cx_uld/examples/: common.rs  explore_lpn.rs  instant_temp.rs  instant_v0_23.rs  m3-emb.rs  m3.rs  ~option_x.rs
tof/vl53l5cx_uld/snippets/: pins.in
tof/vl53l5cx_uld/src/: lib.rs  platform.rs  results_data.rs  state_hp_idle.rs  state_ranging.rs  units.rs
tof/vl53l5cx_uld/tests/: plain_test.rs  satel.rs  utils.rs
tof/vl_api/: .gitignore  API.md  Cargo.toml  Makefile.dev  README.md  WIRING.md  build.rs  pins.toml
tof/vl_api/.excalidraw/: wiring-l5cx-2.excalidraw  wiring-l5cx.excalidraw  wiring-l8.excalidraw
tof/vl_api/DEVS/: Reason to avoid esp_alloc.md
tof/vl_api/build_snippets/: pins.in
tof/vl_api/examples/: fake_alloc.in  many-emb.rs  single-emb.rs  ~many-emb.rs
tof/vl_api/src/: lib.rs  ranging.rs  ranging_flock.rs  uld_platform.rs  vl53.rs
tof/vl_uld/: .gitignore  5.patch  8.patch  Cargo.toml  Makefile  Makefile.dev  README.md  TROUBLES.md  build.rs  pins.toml  platform.h  wrap58.h
tof/vl_uld/.excalidraw/: build-map.excalidraw
tof/vl_uld/DEVS/: Data analysis.md  Devil-in-the-Details.md  Multiple boards.md  Observed ResultsData.md  ULD notes.md  Using patch.md  bindgen enums.md
tof/vl_uld/build_snippets/: pins.in
tof/vl_uld/examples/: common.rs  m3.rs  ~pins_gen.rs
tof/vl_uld/src/: lib.rs  platform.rs  results_data.rs  state_hp_idle.rs  state_ranging.rs
uld-sys/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.h  patch  platform.c  platform.h  wrap.h
uld-sys/VL53L5CX_ULD_API/: about.txt
uld-sys/src/: lib.rs  platform.rs  uld.rs  ~lib.rs
vl53l5cx_uld/: .gitignore  Cargo.toml  Changing the I2C address.md  Makefile  Makefile.2  Makefile.inner  README.md  TRACK.md  WIRING.md  Working with multiple boards.md  build.rs  pins.toml  platform.h  set-target.sh  wrap-wrap.h  wrap.c  wrap.h  ~Makefile  ~platform.c  ~set-address.sh
vl53l5cx_uld/.cargo/: config.toml
vl53l5cx_uld/.excalidraw/: wiring-2-satel-boards.excalidraw
vl53l5cx_uld/DEVS/: I2C address.md  Setting of I2C address.md  probe-rs speed.md
vl53l5cx_uld/examples/: 0-nada.rs  1-ranging_basic.rs  _0-nada.rs  _1-ranging_basic.rs  _2-get_set_parameters.rs  _nada.rs  common.rs  defmt_timestamps.rs  flock.rs  m2.rs  m3.rs  matrix.rs  multiboard.rs  nada.rs  output.rs  pins.in  pins.rs  pins_volatile.in  ~_1-ranging_basic.rs  ~_2-get_set_parameters.rs  ~output.rs  ~set-address.rs
vl53l5cx_uld/examples/flock_lib/: flock_gated.rs  flock_platform.rs  flock_ranging.rs  mod.rs
vl53l5cx_uld/snippets/: pins.in
vl53l5cx_uld/src/: lib.rs  macros.rs  platform.rs  ranging.rs  results_data.rs  uld.rs  units.rs  ~macros  ~uld.rs
(+93 files in other folders)
