[package]
name = "abc"
edition = "2021"
rust-version = "1.81"
publish = false

# 'esp-hal' recommends only using 'release'
# Defaults -> https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=incremental#release
[profile.release]
#debug         = "line-tables-only"  # not enough for RTT: << WARN probe_rs::util::rtt: Insufficient DWARF info; compile your program with `debug = 2` to enable location info. <<
debug = 2
#debug-assertions = true     # since we .. kind-of only live in the 'release'
#codegen-units = 1      # LLVM can perform better optimizations using a single thread
codegen-units = 16
opt-level     = "s"     # optimize for binary size, but keep loop vectorization enabled
#panic         = "unwind"    # drops upper scope vars, e.g. stopping an ongoing scan, which may be nice
lto           = "thin"  # "can produce better optimized code, using whole-program analysis, at the cost of longer linking time."
                        #   - thin: "similar to “fat”, but takes substantially less time to run [...]"

[dev-dependencies]
defmt           = { version = "0.3.10" }
defmt-rtt       = { version = "0.4.1" }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
    # 32768 because TrouBLE ESP32 examples have that
esp-backtrace   = { version = "0.15", features = ["exception-handler", "panic-handler", "defmt", "esp32c6"] }
esp-hal         = { version = "0.23.1", features = ["esp32c6", "defmt"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6", "defmt"] }

semihosting     = { version = "0.1.18" }
    # for testing: features=["stdio", "fs", "time"]
    # "stdio":  WARN probe_rs::cmd::run: Target wanted to open file :tt with mode 114, but probe-rs does not support this operation yet. Continuing...
    # "args" is not supported by 'probe-rs'; Oct'24

[patch.crates-io]
# 'esp-hal' progresses so fast (Jan'25), it's best to keep pulling the latest. Disable this section to use what's published.
esp-backtrace   = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal         = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git" }
