[package]
name = "def"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2021"
license = "MIT"

[dependencies]
defmt = "0.3"
#defmt-rtt = "0.4"
embassy-executor    = { version = "0.5.0", features = ["task-arena-size-40960", "defmt"] }
embassy-time        = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-bus    = { version = "0.1.0", features = ["async"]}
esp-backtrace       = { version = "0.12.1", features = ["exception-handler", "panic-handler", "println"] }
esp-hal             = { version = "0.18.0", features = ["log"] }
esp-hal-embassy     = { version = "0.1.0", features = ["time-timg0"] }
esp-hal-smartled    = { version = "0.11.0", optional = true }
esp-println         = { version = "0.9.1", features = ["log"] }
esp-wifi            = { version = "0.6.0", optional = true }
log                 = { version = "0.4.21" }

[features]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-wifi?/esp32c3", "esp-hal-smartled?/esp32c3"]

#[profile.dev]
## Rust debug is too slow.
## For debug builds always builds with some optimization
#opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
#debug = 2
debug-assertions = false
incremental = true
    #incremental = false        # tbd. sort out debug vs. release ((using '--release' always but no incremental build is stupid)
lto = 'fat'
opt-level = 's'
overflow-checks = false
